Fixed a routes.js bug to enable getting posts, and updated some posting UI

--- a/app/views/footerFiles.jade
+++ b/app/views/footerFiles.jade
@@ -6,11 +6,15 @@ script(type='text/javascript', src = '/libraries/sha1.js')
 script(type='text/javascript', src='/javascripts/socket.js')
 script(type='text/javascript', src='/javascripts/cookies.js')
 
-script(type='text/javascript', src='/javascripts/loginForm.js')
+script(type='text/javascript', src='/javascripts/logInForm.js')
 script(type='text/javascript', src='/javascripts/signUpForm.js')
-script(type='text/javascript', src='/javascripts/postForm.js')
-script(type='text/javascript', src='/javascripts/requestForm.js')
 script(type='text/javascript', src='/javascripts/logOut.js')
 
+script(type='text/javascript', src='/javascripts/postStream.js')
+script(type='text/javascript', src='/javascripts/requestStream.js')
+
+script(type='text/javascript', src='/javascripts/postForm.js')
+script(type='text/javascript', src='/javascripts/requestForm.js')
+
 script(type='text/javascript').
-      $('.postViews').tooltip({ placement: 'left' });
+      $('.postViews, .postIcon').tooltip({ placement: 'left' });
