Added hacky functions for appending new posts and requests to the DOM

--- a/app/views/index.jade
+++ b/app/views/index.jade
@@ -48,75 +48,7 @@ html
                 button#postFormSubmit.btn.btn-schola.btn-xs(type='submit') Post
 
           div#postStream
-            div.post
-              div.postSide
-                div.postTitle
-                  span.postUsername rzhou 
-                  | added a post.
-                div.postDate 22 Apr
-                div.postViews(data-toggle='tooltip', title='42 views') 42 
-                  span.glyphicon.glyphicon-eye-open
-              div.postMain
-                div.postIcon(data-toggle='tooltip', title='Link')
-                  span.glyphicon.glyphicon-link
-                div.postName
-                  a(href='#') Ray Zhou's Stanford Essays
-                div.postDescription
-                  p My Stanford college essays from the 2011-2012 application cycle. Includes my responses to the 3 supplemental questions asked by Stanford 2 years ago.
-                div.postAccess
-                  button.postGet.btn.btn-schola.btn-xs View
-            div.post
-              div.postSide
-                div.postTitle
-                  span.postUsername gshubham 
-                  | added a post.
-                div.postDate 20 Apr
-                div.postViews(data-toggle='tooltip', title='20 views') 20 
-                  span.glyphicon.glyphicon-eye-open
-              div.postMain
-                div.postIcon(data-toggle='tooltip', title='Link')
-                  span.glyphicon.glyphicon-link
-                div.postName
-                  a(href='#') Shubham Goel's Stanford Essays
-                div.postDescription
-                  p My Stanford college essays from the 2011-2012 application cycle. Includes my responses to the 3 supplemental questions asked by Stanford 2 years ago.
-                div.postAccess
-                  button.postGet.btn.btn-schola.btn-xs View
-            div.post
-              div.postSide
-                div.postTitle
-                  span.postUsername gshubham 
-                  | added a post.
-                div.postDate 18 Apr
-                div.postViews(data-toggle='tooltip', title='10 views') 10 
-                  span.glyphicon.glyphicon-eye-open
-              div.postMain
-                div.postIcon(data-toggle='tooltip', title='Link')
-                  span.glyphicon.glyphicon-link
-                div.postName
-                  a(href='#') Brian Do's Stanford Essays
-                div.postDescription
-                  p My Stanford college essays from the 2011-2012 application cycle. Includes my responses to the 3 supplemental questions asked by Stanford 2 years ago.
-                div.postAccess
-                  button.postGet.btn.btn-schola.btn-xs View
-            div.post
-              div.postSide
-                div.postTitle
-                  span.postUsername rzhou 
-                  | added a post.
-                div.postDate 16 Apr
-                div.postViews(data-toggle='tooltip', title='24 views') 24 
-                  span.glyphicon.glyphicon-eye-open
-              div.postMain
-                div.postIcon(data-toggle='tooltip', title='Link')
-                  span.glyphicon.glyphicon-link
-                div.postName
-                  a(href='#') Amanda Chow's Stanford Essays
-                div.postDescription
-                  p My Stanford college essays from the 2011-2012 application cycle. Includes my responses to the 3 supplemental questions asked by Stanford 2 years ago.
-                div.postAccess
-                  button.postGet.btn.btn-schola.btn-xs View
-
+            div#posts
             div.postStreamLoading
               img(src='/images/loading.gif')
 
@@ -129,49 +61,7 @@ html
             button#requestFormSubmit.btn.btn-schola.btn-xs(type='submit') Request
 
           div#requestStream
-            div.request
-              div.requestMain
-                div.requestTitle
-                  span.requestUsername anonymous 
-                  | requested:
-                div.requestDate 16 Apr
-                div.requestName
-                  | Ian Zhou's Stanford college essays
-              div.requestSide
-                div.requestStatus
-                  span.glyphicon.glyphicon-unchecked
-                button.btn.btn-default.btn-xs.btn-block
-                  span.glyphicon.glyphicon-chevron-up
-                  div.requestUpvotes 24
-            div.request
-              div.requestMain
-                div.requestTitle
-                  span.requestUsername anonymous 
-                  | requested:
-                div.requestDate 22 Apr
-                div.requestName
-                  a(href='#') Roger Chen's Stanford college essays
-              div.requestSide
-                div.requestStatus
-                  span.glyphicon.glyphicon-ok
-                button.btn.btn-default.btn-xs.btn-block.disabled
-                  span.glyphicon.glyphicon-chevron-up
-                  div.requestUpvotes 28
-            div.request
-              div.requestMain
-                div.requestTitle
-                  span.requestUsername anonymous 
-                  | requested:
-                div.requestDate 25 Apr
-                div.requestName
-                  a(href='#') Edward Wang's Stanford college essays
-              div.requestSide
-                div.requestStatus
-                  span.glyphicon.glyphicon-ok
-                button.btn.btn-default.btn-xs.btn-block.disabled
-                  span.glyphicon.glyphicon-chevron-up
-                  div.requestUpvotes 28
-
+            div#requests
             div.requestStreamLoading
               img(src='/images/loading.gif')
 
