--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -3,6 +3,13 @@ body {
   font-size: 13px;
 }
 
+.fixedOverlay {
+  position: fixed;
+  top: 0px;
+  padding-top: 70px;
+  width: 100%;
+}
+
 .container {
   max-width: 970px;
 }
@@ -15,6 +22,7 @@ body {
 #requestForm {
   overflow: hidden;
   margin-bottom: 20px;
+  padding-right: 20px;
 }
 
 #requestForm .requestFormName {
@@ -29,8 +37,9 @@ body {
 }
 
 #requestStream {
-  height: 400px;
+  height: 350px;
   overflow: auto;
+  padding-right: 20px;
 }
 
 .request {
@@ -128,7 +137,7 @@ body {
   color: #999999;
 }
 
-.postSide .postViews {
+.postSide .postViewsContainer {
   display: inline-block;
   border: 1px solid #cccccc;
   border-radius: 3px;
