--- a/app/views/footerFiles.jade
+++ b/app/views/footerFiles.jade
@@ -3,7 +3,9 @@ script(type='text/javascript', src='/libraries/jquery-1.10.2.min.js')
 script(type='text/javascript', src="//cdnjs.cloudflare.com/ajax/libs/socket.io/0.9.10/socket.io.min.js")
 script(type='text/javascript', src='/libraries/bootstrap/js/bootstrap.min.js')
 script(type='text/javascript', src = '/libraries/sha1.js')
+
 script(type='text/javascript', src='/javascripts/socket.js')
+script(type='text/javascript', src='/javascripts/datetimes.js')
 script(type='text/javascript', src='/javascripts/cookies.js')
 
 script(type='text/javascript', src='/javascripts/logInForm.js')
