Updated alerting system

--- a/app/views/footerFiles.jade
+++ b/app/views/footerFiles.jade
@@ -4,7 +4,8 @@ script(type='text/javascript', src="//cdnjs.cloudflare.com/ajax/libs/socket.io/0
 script(type='text/javascript', src='/libraries/bootstrap/js/bootstrap.min.js')
 script(type='text/javascript', src = '/libraries/sha1.js')
 
-script(type='text/javascript', src='/javascripts/socket.js')
+script(type='text/javascript', src='/javascripts/alerts.js')
+script(type='text/javascript', src='/javascripts/sockets.js')
 script(type='text/javascript', src='/javascripts/datetimes.js')
 script(type='text/javascript', src='/javascripts/cookies.js')
 
