--- a/app/views/index.jade
+++ b/app/views/index.jade
@@ -51,10 +51,11 @@ html
               div.requestStreamLoading
                 img(src='/images/loading.gif')
 
-
     div.container.nonResponsive
       div.row
         div.col-xs-9.postsCol
+
+          div.globalAlerts
 
           if isLoggedIn && isModerator
             form#postForm
