--- a/app/views/headerFiles.jade
+++ b/app/views/headerFiles.jade
@@ -3,4 +3,4 @@ link(rel='stylesheet', href='/libraries/bootstrap/css/bootstrap.min.css')
 link(rel='stylesheet', href='/stylesheets/style.css')
 
 // Google Analytics
-script(src='/js/analytics.js')
+script(type='text/javascript', src='/javascripts/analytics.js')
