--- a/app/views/footerFiles.jade
+++ b/app/views/footerFiles.jade
@@ -1,12 +1,17 @@
-script(type='text/javascript', src='/libraries/jquery-1.10.2.min.js')
+// Libraries
+script(type='text/javascript', src='/libraries/ga.js')
 script(type='text/javascript', src="//cdnjs.cloudflare.com/ajax/libs/socket.io/0.9.10/socket.io.min.js")
+script(type='text/javascript', src='/libraries/jquery-1.10.2.min.js')
 script(type='text/javascript', src='/libraries/bootstrap/js/bootstrap.min.js')
 script(type='text/javascript', src = '/libraries/sha1.js')
 
-script(type='text/javascript', src='/javascripts/alerts.js')
-script(type='text/javascript', src='/javascripts/sockets.js')
-script(type='text/javascript', src='/javascripts/datetimes.js')
-script(type='text/javascript', src='/javascripts/cookies.js')
+// Utilities
+script(type='text/javascript', src='/javascripts/utilities/socket.js')
+script(type='text/javascript', src='/javascripts/utilities/dateTime.js')
+script(type='text/javascript', src='/javascripts/utilities/cookie.js')
+
+// Everything else
+script(type='text/javascript', src='/javascripts/alert.js')
 
 script(type='text/javascript', src='/javascripts/logInForm.js')
 script(type='text/javascript', src='/javascripts/signUpForm.js')
@@ -17,3 +22,5 @@ script(type='text/javascript', src='/javascripts/requestStream.js')
 
 script(type='text/javascript', src='/javascripts/postForm.js')
 script(type='text/javascript', src='/javascripts/requestForm.js')
+
+script(type='text/javascript', src='/javascripts/app.js')
