--- a/app/views/footerFiles.jade
+++ b/app/views/footerFiles.jade
@@ -1,30 +1,20 @@
-// Libraries
 script(type="text/javascript", src="//cdnjs.cloudflare.com/ajax/libs/socket.io/0.9.10/socket.io.min.js")
 script(type="text/javascript", src="/libraries/jquery-1.10.2.min.js")
 script(type="text/javascript", src="/libraries/underscore-min.js")
 script(type="text/javascript", src="/libraries/backbone-min.js")
 script(type="text/javascript", src="/libraries/bootstrap/js/bootstrap.min.js")
 script(type="text/javascript", src="/libraries/sha1.js")
-
-// Utilities
-script(type="text/javascript", src="/javascripts/utilities/socket.js")
+script(type="text/javascript", src="/javascripts/socket.js")
 script(type="text/javascript", src="/javascripts/utilities/cookies.js")
 script(type="text/javascript", src="/javascripts/utilities/crypto.js")
 script(type="text/javascript", src="/javascripts/utilities/dateTime.js")
 script(type="text/javascript", src="/javascripts/utilities/alerter.js")
-
-// Views
+script(type="text/javascript", src="/javascripts/views/bodyView.js")
 script(type="text/javascript", src="/javascripts/views/logInFormView.js")
 script(type="text/javascript", src="/javascripts/views/signUpFormView.js")
 script(type="text/javascript", src="/javascripts/views/logOutView.js")
-
-// Everything else
-script(type="text/javascript", src="/javascripts/alert.js")
-
+script(type="text/javascript", src="/javascripts/views/postFormView.js")
+script(type="text/javascript", src="/javascripts/views/requestFormView.js")
 script(type="text/javascript", src="/javascripts/postStream.js")
 script(type="text/javascript", src="/javascripts/requestStream.js")
-
-script(type="text/javascript", src="/javascripts/postForm.js")
-script(type="text/javascript", src="/javascripts/requestForm.js")
-
 script(type="text/javascript", src="/javascripts/app.js")
