In progress of porting streams to backbone

--- a/app/views/footerFiles.jade
+++ b/app/views/footerFiles.jade
@@ -15,6 +15,11 @@ script(type="text/javascript", src="/javascripts/views/signUpFormView.js")
 script(type="text/javascript", src="/javascripts/views/logOutView.js")
 script(type="text/javascript", src="/javascripts/views/postFormView.js")
 script(type="text/javascript", src="/javascripts/views/requestFormView.js")
-script(type="text/javascript", src="/javascripts/postStream.js")
+
+// script(type="text/javascript", src="/javascripts/postStream.js")
+script(type="text/javascript", src="/javascripts/models/post.js")
+script(type="text/javascript", src="/javascripts/views/postView.js")
+script(type="text/javascript", src="/javascripts/views/postStreamView.js")
+
 script(type="text/javascript", src="/javascripts/requestStream.js")
 script(type="text/javascript", src="/javascripts/app.js")
