Ported navbar to separate view

--- a/app/views/footerFiles.jade
+++ b/app/views/footerFiles.jade
@@ -13,6 +13,7 @@ script(type="text/javascript", src="/javascripts/views/bodyView.js")
 script(type="text/javascript", src="/javascripts/views/logInFormView.js")
 script(type="text/javascript", src="/javascripts/views/signUpFormView.js")
 script(type="text/javascript", src="/javascripts/views/logOutView.js")
+script(type="text/javascript", src="/javascripts/views/navbarView.js")
 script(type="text/javascript", src="/javascripts/views/postFormView.js")
 script(type="text/javascript", src="/javascripts/views/requestFormView.js")
 
