Fixed a bunch of front end side to fit with new backend

--- a/app/views/footerFiles.jade
+++ b/app/views/footerFiles.jade
@@ -17,6 +17,9 @@ script(type="text/javascript", src="/javascripts/views/signUpFormView.js")
 script(type="text/javascript", src="/javascripts/views/logOutView.js")
 script(type="text/javascript", src="/javascripts/views/navbarView.js")
 
+script(type="text/javascript", src="/javascripts/views/requestFormView.js")
+script(type="text/javascript", src="/javascripts/views/requestResponseFormView.js")
+
 script(type="text/javascript", src="/javascripts/models/request.js")
 script(type="text/javascript", src="/javascripts/views/requestView.js")
 script(type="text/javascript", src="/javascripts/views/requestStreamView.js")
