--- a/app/views/headerFiles.jade
+++ b/app/views/headerFiles.jade
@@ -1,5 +1,8 @@
 link(rel="stylesheet", href="http://fonts.googleapis.com/css?family=Libre+Baskerville:400,700")
 link(rel="stylesheet", href="/libraries/bootstrap/css/bootstrap.min.css")
-link(rel="stylesheet", href="/stylesheets/style.css")
+link(rel="stylesheet", href="/stylesheets/buttons.css")
+link(rel="stylesheet", href="/stylesheets/navbar.css")
+link(rel="stylesheet", href="/stylesheets/requestStream.css")
+link(rel="stylesheet", href="/stylesheets/main.css")
 
 script(type="text/javascript", src="/javascripts/ga.js")
