--- a/app/views/navbar.jade
+++ b/app/views/navbar.jade
@@ -13,7 +13,7 @@ nav#navbar.navbar.navbar-default.navbar-fixed-top(role="navigation")
         div.nav.navbar-nav.navbar-right
           if isModerator
             li
-              a#profileAccess(href="#")
+              a#userAccess(href="#")
           li
             a#logOut(href="#") Logout
       else
