Connected most of frontend and backend together

--- a/app/views/index.jade
+++ b/app/views/index.jade
@@ -8,6 +8,8 @@ html
   body
     include navbar.jade
 
+    //- Deal with responsive sidebar later, in bodyView.js
+
     div.container.notResponsive
       div.row
         div.col-xs-9
