--- a/app/views/headerFiles.jade
+++ b/app/views/headerFiles.jade
@@ -2,6 +2,7 @@ link(rel="stylesheet", href="http://fonts.googleapis.com/css?family=Libre+Basker
 link(rel="stylesheet", href="/libraries/bootstrap/css/bootstrap.min.css")
 link(rel="stylesheet", href="/stylesheets/buttons.css")
 link(rel="stylesheet", href="/stylesheets/navbar.css")
+link(rel="stylesheet", href="/stylesheets/requestForm.css")
 link(rel="stylesheet", href="/stylesheets/requestStream.css")
 link(rel="stylesheet", href="/stylesheets/main.css")
 
