--- a/app/views/navbar.jade
+++ b/app/views/navbar.jade
@@ -1,7 +1,7 @@
 nav#navbar.navbar.navbar-default.navbar-fixed-top(role="navigation")
   div.container
     div.navbar-header
-      a.navbar-brand(href="")
+      a.navbar-brand(href="/")
         img(src="/images/logo-white.png")
         | Schola
       button.navbar-toggle(data-toggle="collapse", data-target=".navbar-collapse")
@@ -11,7 +11,7 @@ nav#navbar.navbar.navbar-default.navbar-fixed-top(role="navigation")
     div.collapse.navbar-collapse
       if isLoggedIn
         div.nav.navbar-nav.navbar-right
-          if isModerator
+          if isSatisfier
             li
               a#userAccess(href="#")
           li
