--- a/public/stylesheets/requestStream.css
+++ b/public/stylesheets/requestStream.css
@@ -10,14 +10,6 @@
   text-align: right;
 }
 
-.requestSide .requestTitle {
-  color: #666666;
-}
-
-.requestSide .requestTitle .requestUsername {
-  font-weight: bold;
-}
-
 .requestSide .requestDateTime {
   margin-bottom: 10px;
   color: #999999;
@@ -35,20 +27,53 @@
   width: 60%;
   display: inline-block;
   vertical-align: top;
-  padding-bottom: 10px;
+  padding-bottom: 20px;
   border-bottom: 2px solid #eeeeee;
 }
 
 .requestMain .requestName {
-  margin-bottom: 10px;
   font-weight: bold;
   font-size: 14px;
+  max-width: 90%;
+}
+
+.requestMain .requestOrigin {
+  margin-bottom: 15px;
+  color: #999999;
   max-width: 90%;
 }
 
 .requestMain .requestUpvotes {
   float: right;
   width: 30px;
+}
+
+.requestMain .requestResponseForm {
+  overflow: hidden;
+  margin-top: 20px;
+  padding: 10px;
+  border: 2px solid #eeeeee;
+}
+
+.requestMain .requestResponseForm .btn-schola {
+  font-weight: bold;
+  width: 70px;
+}
+
+.requestMain .requestResponseForm .requestResponseFormName {
+  min-width: 100%;
+  max-width: 100%;
+  display: block;
+  margin-bottom: 10px;
+}
+
+.requestMain .requestResponseForm .requestResponseFormSubmit {
+  float: right;
+}
+
+.satisfierName,
+.requesterName {
+  font-weight: bold;
 }
 
 #requestStreamLoading {
