Patched up frontend bugs

--- a/app/views/index.jade
+++ b/app/views/index.jade
@@ -9,6 +9,7 @@ html
     include navbar.jade
 
     //- Deal with responsive sidebar later, in bodyView.js
+    //- Use fixedOverlay
 
     div.container.notResponsive
       div.row
