--- a/app/views/userPage.jade
+++ b/app/views/userPage.jade
@@ -21,6 +21,7 @@ html
               img(src="/images/loading.gif")
         div.col-xs-3
           div#alerts
+          //- Either diable this if they're not logged in, or make it prompt a sign up
           form#requestForm
             p
               strong Add Request
@@ -32,4 +33,4 @@ html
       app.pageData = !{data};
 
     include footerFiles.jade
-    script(type="text/javascript", src="/javascripts/user.js")
+    script(type="text/javascript", src="/javascripts/userPage.js")
