Core functionality seems to be working (requesting and satisfying requests

--- a/app/views/userPage.jade
+++ b/app/views/userPage.jade
@@ -21,7 +21,7 @@ html
               img(src="/images/loading.gif")
         div.col-xs-3
           div#alerts
-          //- Either diable this if they're not logged in, or make it prompt a sign up
+          //- Either disable this if they're not logged in, or make it prompt a sign up
           form#requestForm
             p
               strong Add Request
