--- a/app/views/userPage.jade
+++ b/app/views/userPage.jade
@@ -17,7 +17,7 @@ html
             div#requests
             div#requestStreamLoading
               img(src="/images/loading.gif")
-        div.col-xs-3
+        div.col-xs-3#sidebar
           div#alerts
           div#userInfo
             div.userUsername
