--- a/public/stylesheets/errorPage.css
+++ b/public/stylesheets/errorPage.css
@@ -1,8 +1,12 @@
+body {
+  text-align: right;
+}
+
 h1 {
   font-size: 72px;
   font-weight: bold;
 }
 
 p {
-  font-size: 32px;
+  font-size: 24px;
 }
