Repositioning sidebar working; patched up some other minor issues

--- a/app/views/homePage.jade
+++ b/app/views/homePage.jade
@@ -9,6 +9,12 @@ html
   body
     include navbar.jade
 
+    div.fixedOverlay
+      div.container.notResponsive
+        div.row
+          div.col-xs-9
+          div.col-xs-3#sidebarFixed
+
     div.container.notResponsive
       div.row
         div.col-xs-9
@@ -16,8 +22,9 @@ html
             div#requests
             div#requestStreamLoading
               img(src="/images/loading.gif")
-        div.col-xs-3#sidebar
-          div#alerts
-          div#trendingUsers
+        div.col-xs-3#sidebarRelative
+          div#sidebar
+            div#alerts
+            div#trendingUsers
 
     include footerFiles.jade
