--- a/public/stylesheets/userInfo.css
+++ b/public/stylesheets/userInfo.css
@@ -1,6 +1,8 @@
 #userInfo {
-  margin-bottom: 20px;
   text-align: right;
+  margin-bottom: 20px;
+  border-bottom: 2px solid #eeeeee;
+  padding-bottom: 20px;
 }
 
 #userInfo .userUsername {
