Request form now disabled for users not logged in

--- a/app/views/homePage.jade
+++ b/app/views/homePage.jade
@@ -27,4 +27,11 @@ html
             div#alerts
             div#trendingUsers
 
+    script
+      var app = app || {};
+      app.viewerData = {
+        isLoggedIn: !{isLoggedIn},
+        isSatisfier: !{isSatisfier}
+      };
+
     include footerFiles.jade
